--- a/templates/pages/about.html
+++ b/templates/pages/about.html
@@ -40,16 +40,21 @@
             commodi id libero eveniet harum perferendis laborum molestias quia.</p>
         </div>
         <div class="col-md-4">
-          <div class="card">
-            <img class="card-img-top" src="assets/img/realtors/kyle.jpg" alt="Seller of the month">
+          {% if mvp_rltrs %}
+            {% for rltr in mvp_rltrs %}
+            <div class="card">
+            <img class="card-img-top" src="{{ rltr.photo.url }}" alt="Seller of the month">
             <div class="card-body">
               <h5 class="card-title">Seller Of The Month</h5>
-              <h6 class="text-secondary">Kyle Brown</h6>
-              <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis nesciunt amet, illo itaque similique repellat.
-                content.
+              <h6 class="text-secondary">{{ rltr.name }}</h6>
+              <p class="card-text">{{ rltr.description }}
               </p>
             </div>
           </div>
+            {% endfor %}
+          
+          {% endif %}
+          
         </div>
       </div>
     </div>
@@ -66,42 +71,31 @@
   <!-- Team -->
   <section id="team" class="py-5">
     <div class="container">
-      <h2 class="text-center">Our Team</h2>
-      <div class="row text-center">
-        <div class="col-md-4">
-          <img src="assets/img/realtors/kyle.jpg" alt="" class="rounded-circle mb-3">
-          <h4>Kyle Brown</h4>
-          <p class="text-success">
-            <i class="fas fa-award text-success mb-3"></i> Realtor</p>
-          <hr>
-          <p>
-            <i class="fas fa-phone"></i> (555)-555-5555</p>
-          <p>
-            <i class="fas fa-envelope-open"></i> kyle@btrealestate.co</p>
-        </div>
-
-        <div class="col-md-4">
-          <img src="assets/img/realtors/mark.jpg" alt="" class="rounded-circle mb-3">
-          <h4>Mark Hudson</h4>
-          <p class="text-success">Realtor</p>
-          <hr>
-          <p>
-            <i class="fas fa-phone"></i> (444)-444-4444</p>
-          <p>
-            <i class="fas fa-envelope-open"></i> mark@btrealestate.co</p>
-        </div>
-
-        <div class="col-md-4">
-          <img src="assets/img/realtors/jenny.jpg" alt="" class="rounded-circle mb-3">
-          <h4>Jenny Johnson</h4>
-          <p class="text-success">Realtor</p>
-          <hr>
-          <p>
-            <i class="fas fa-phone"></i> (333)-333-3333</p>
-          <p>
-            <i class="fas fa-envelope-open"></i> jenny@btrealestate.co</p>
-        </div>
+      <h2 class="text-center">Our Team</h2> 
+        <div class="row text-center">
+      {% if rltrs %}
+        {% for rltr in rltrs %}
+          <div class="col-md-4">
+            <img src="{{ rltr.photo.url }}" alt="" class="rounded-circle mb-3">
+            <h4>{{ rltr.name }}</h4>
+            <p class="text-success">
+              <i class="fas fa-award text-success mb-3"></i> Realtor</p>
+            <hr>
+            <p>
+              <i class="fas fa-phone"></i> {{ rltr.phone }}</p>
+            <p>
+              <i class="fas fa-envelope-open"></i> {{ rltr.email }}</p>
+          </div>
+        {% endfor %}  
+      {% else %}
+      <div class="col-md-12">
+        <p>
+          No Realtors Available
+        </p>
       </div>
+
+      {% endif %} 
+        </div>
     </div>
   </section>
 {% endblock %}
